# IFProject

./: .coverage  .gitignore  issue_template.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: Project Developer Guide.md  Syntax.md
src/engine/: ast.py  exceptions.py  game.py  interpreter.py  main.py  parser.py  syntax.py  syntax.yaml  view.py
src/web_ui/: main.py  pyscript.toml
tests/: cases.py  test_parser.py  test_stories.py  test_syntax.py  test_syntax_loader.py
tests/stories/: default_var_values.yaml  error.yaml  hello_world.yaml  simple_choice.yaml  simple_choice_goto.yaml  simple_gosub.yaml  simple_goto.yaml  simple_vars.yaml  simple_wait.yaml
tests/syntax/: syntax_fixture.py  test_syntax.py
